# SimVital

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  resources.qrc  run.sh  simvital.db
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
SimVital_autogen/: deps  moc_predefs.h
app/: CMakeCache.txt  CMakeLists.txt  main.cpp
app/controllers/: EcgController.cpp  EcgController.hpp  NibpController.cpp  NibpController.hpp  RrController.cpp  RrController.hpp  SpO2Controller.cpp  SpO2Controller.hpp  SpO2WaveController.cpp  SpO2WaveController.hpp
app/managers/: AdminManager.cpp  AdminManager.hpp  AppManager.cpp  AppManager.hpp  AudioManager.cpp  AudioManager.hpp  SessionManager.cpp  SessionManager.hpp
app/models/: UserModel.cpp  UserModel.hpp
app/qml/: AdminScreen.qml  ControlPanelScreen.qml  LoginScreen.qml  LogoutScreen.qml  MonitorScreen.qml  NavBar.qml  NavButton.qml  NibpBox.qml  PatientScreen.qml  ReadingsBox.qml  ScenarioButton.qml  TrendsScreen.qml  main.qml
core/: CMakeLists.txt
core/include/: DatabaseManager.hpp  EcgGenerator.hpp  MitBihParser.hpp  NibpGenerator.hpp  PatientScenario.hpp  RingBuffer.hpp  RrGenerator.hpp  ScenarioManager.hpp  SimulationEngine.hpp  SpO2Generator.hpp  SpO2WaveGenerator.hpp  UserData.hpp
core/src/: DatabaseManager.cpp  EcgGenerator.cpp  MitBihParser.cpp  MitBihParser.hpp  NibpGenerator.cpp  RingBuffer.cpp  RrGenerator.cpp  ScenarioManager.cpp  SimulationEngine.cpp  SpO2Generator.cpp  SpO2WaveGenerator.cpp  WaveFormGenerator.cpp
data/: normal.json  vtach.json
data/jsonFiles/: afib.json  bigeminy.json  normal.json  vfib.json  vtach.json
tests/: CMakeLists.txt
